[gd_scene load_steps=22 format=3 uid="uid://cnja45pmji5h8"]

[ext_resource type="Script" uid="uid://2ku2tbmetn6s" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://sa5uqnal12bl" path="res://sprites/playbtn2.png" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://dp8n25op4qny" path="res://fonts/pixelsans/PixeloidSansBold-OG894.ttf" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://dptf3qbncjlhi" path="res://sprites/Screenshot 2025-12-22 211440.png" id="4_rtw2f"]
[ext_resource type="Texture2D" uid="uid://c0sq732wvk8sw" path="res://sprites/logo.png" id="5_oa1go"]
[ext_resource type="Texture2D" uid="uid://hwpplo08h6d6" path="res://sprites/storm.png" id="6_rtw2f"]
[ext_resource type="PackedScene" uid="uid://d3qqreh404bjs" path="res://scenes/mb.tscn" id="7_oa1go"]
[ext_resource type="AudioStream" uid="uid://briocdocfydn" path="res://music/bgse2.ogg" id="8_tbmy8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("6_rtw2f")
region = Rect2(0, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("6_rtw2f")
region = Rect2(256, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("6_rtw2f")
region = Rect2(512, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("6_rtw2f")
region = Rect2(768, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("6_rtw2f")
region = Rect2(1024, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("6_rtw2f")
region = Rect2(1280, 0, 256, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rcqid"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_oa1go"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leftstorm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2363, 330)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rightstorm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3520, 329.00003)]
}

[sub_resource type="Animation" id="Animation_rtw2f"]
resource_name = "stormclose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leftstorm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2363, 330), Vector2(-1862.0001, 329)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rightstorm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3520, 329.00003), Vector2(2942, 330)]
}

[sub_resource type="Animation" id="Animation_tbmy8"]
resource_name = "stormopen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leftstorm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2012, 329), Vector2(-2363, 329)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rightstorm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2967, 330), Vector2(3520, 330)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jk1qb"]
_data = {
&"RESET": SubResource("Animation_oa1go"),
&"stormclose": SubResource("Animation_rtw2f"),
&"stormopen": SubResource("Animation_tbmy8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbmy8"]
size = Vector2(1958, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa1go"]
size = Vector2(180, 246.5)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8166533, 0.8166533, 0.8166533, 0.6039216)
z_index = -1
position = Vector2(574, 330)
texture = ExtResource("4_rtw2f")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(571, 162)
scale = Vector2(1.4738562, 1.3161764)
texture = ExtResource("5_oa1go")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 320.0
offset_right = 655.0
offset_bottom = 469.0
theme_override_colors/font_color = Color(1, 0.6431373, 0.4745098, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_8ln24")
theme_override_font_sizes/font_size = 50
icon = ExtResource("2_bqqt6")
icon_alignment = 1
expand_icon = true

[node name="leftstorm" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(-2363, 330)
scale = Vector2(20.2, 20.2)
sprite_frames = SubResource("SpriteFrames_rcqid")

[node name="rightstorm" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(3520, 329.00003)
scale = Vector2(20.2, 20.2)
sprite_frames = SubResource("SpriteFrames_rcqid")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jk1qb")
}

[node name="CharacterBody2D" parent="." instance=ExtResource("7_oa1go")]
position = Vector2(546, 552)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(703, 707)
shape = SubResource("RectangleShape2D_tbmy8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1121, 525.25)
shape = SubResource("RectangleShape2D_oa1go")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(44, 522)
shape = SubResource("RectangleShape2D_oa1go")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_tbmy8")
volume_db = -19.579

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="animation_finished" from="rightstorm" to="." method="_on_rightstorm_animation_finished"]
